--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -1733,13 +1733,13 @@ On the previous models is applied the GridSearch with a \emph{cv} of 10 in order
 
     \begin{enumerate}
 
-        \item \emph{learning_rate}: [0.01, 0.05, 0.1]
+        \item \emph{learning\textunderscore rate}: [0.01, 0.05, 0.1]
 
-        \item \emph{n_estimators}: [100, 200, 300]
+        \item \emph{n\textunderscore estimators}: [100, 200, 300]
 
-        \item \emph{num_leaves}: [20, 30, 40]
+        \item \emph{num\textunderscore leaves}: [20, 30, 40]
 
-        \item \emph{min_child_samples}: [10, 20, 30]
+        \item \emph{min\textunderscore child\textunderscore samples}: [10, 20, 30]
 
     \end{enumerate}
     
