--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -1775,11 +1775,11 @@ Before delving into the evaluation of accuracy and fairness metrics, it is imper
     \hline
     \textbf{Model} & \textbf{Best parameters} \\
     \hline
-    RandomForest Classifier  &  {'criterion': 'log_loss', 'max_depth': 40, 'max_leaf_nodes': 40, 'n_estimators': 70} \\
+    RandomForest Classifier  &  {'criterion': 'log\textunderscore loss', 'max\textunderscore depth': 40, 'max\textunderscore leaf\textunderscore nodes': 40, 'n\textunderscore estimators': 70} \\
     \hline
-    LGB Classifier & {'learning_rate': 0.1, 'min_child_samples': 30, 'n_estimators': 300, 'num_leaves': 40} \\
+    LGB Classifier & {'learning\textunderscore rate': 0.1, 'min\textunderscore child\textunderscore samples': 30, 'n\textunderscore estimators': 300, 'num\textunderscore leaves': 40} \\
     \hline
-    DecisionTree Classifier & {'criterion': 'gini', 'max_depth': 30, 'max_leaf_nodes': 20} \\
+    DecisionTree Classifier & {'criterion': 'gini', 'max\textunderscore depth': 30, 'max\textunderscore leaf\textunderscore nodes': 20} \\
     \hline
 \end{tabular}
 
@@ -1829,11 +1829,11 @@ The confluence of a 99\% accuracy rate and a minimal Demographic Parity of 0.018
     \hline
     \textbf{Model} & \textbf{Best parameters} \\
     \hline
-    RandomForest Classifier  &  {'criterion': 'entropy', 'max_depth': 40, 'max_leaf_nodes': 40, 'n_estimators': 90} \\
+    RandomForest Classifier  &  {'criterion': 'entropy', 'max\textunderscore depth': 40, 'max\textunderscore leaf\textunderscore nodes': 40, 'n\textunderscore estimators': 90} \\
     \hline
-    LGB Classifier & {'learning_rate': 0.05, 'min_child_samples': 20, 'n_estimators': 100, 'num_leaves': 20} \\
+    LGB Classifier & {'learning\textunderscore rate': 0.05, 'min\textunderscore child\textunderscore samples': 20, 'n\textunderscore estimators': 100, 'num\textunderscore leaves': 20} \\
     \hline
-    DecisionTree Classifier & {'criterion': 'gini', 'max_depth': 10, 'max_leaf_nodes': 10} \\
+    DecisionTree Classifier & {'criterion': 'gini', 'max\textunderscore depth': 10, 'max\textunderscore leaf\textunderscore nodes': 10} \\
     \hline
 \end{tabular}
 
@@ -1882,11 +1882,11 @@ This outcome prompts a reflective evaluation of the trade-offs between accuracy 
     \hline
     \textbf{Model} & \textbf{Best parameters} \\
     \hline
-    RandomForest Classifier  &  {'criterion': 'entropy', 'max_depth': 10, 'max_leaf_nodes': 40, 'n_estimators': 70} \\
+    RandomForest Classifier  &  {'criterion': 'entropy', 'max\textunderscore depth': 10, 'max\textunderscore leaf\textunderscore nodes': 40, n\textunderscore estimators': 70} \\
     \hline
-    LGB Classifier & {'learning_rate': 0.05, 'min_child_samples': 20, 'n_estimators': 100, 'num_leaves': 20} \\
+    LGB Classifier & {'learning\textunderscore rate': 0.05, 'min\textunderscore child\textunderscore samples': 20, 'n\textunderscore estimators': 100, 'num\textunderscore leaves': 20} \\
     \hline
-    DecisionTree Classifier & {'criterion': 'gini', 'max_depth': 10, 'max_leaf_nodes': 10} \\
+    DecisionTree Classifier & {'criterion': 'gini', 'max\textunderscore depth': 10, 'max\textunderscore leaf\textunderscore nodes': 10} \\
     \hline
 \end{tabular}
 
